--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <p>Download video from Youtube and play video</p>
                     <p>easy to use</p>
                     <img src="home.png" class="" alt="Cinque Terre" style="max-width: 500px;">
+                    <img src="playVideo.png" class="" alt="Cinque Terre" style="max-width: 500px;">
                 </section>
             </div>
             <div class="col-2"></div>
