--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
                 <section>
                     <h3>Project</h3>
                     <h4>Download video</h4>
-                    <p>Download video from Youtube and play video</p>
-                    <p>easy to use</p>
+                    <p>Download video from Youtube and play video.</p>
+                    <p>Easy to use.</p>
                     <img src="home.png" class="" alt="Cinque Terre" style="max-width: 500px;">
+                    <p>Chose the video you want to download from YouTube. Then fill it in. Choose the quality.</p>
                     <img src="playVideo.png" class="" alt="Cinque Terre" style="max-width: 500px;">
+                    <p>Chose the video and play</p>
                 </section>
             </div>
             <div class="col-2"></div>
